# ethui

./: .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .mise.toml  .prettierignore  .prettierrc.js  .rgignore  .tool-versions  CODEOWNERS  CONTRIBUTING.md  Cargo-test.toml  Cargo.toml  Dockerfile  Dockerfile.e2e  Justfile  LICENSE  README.md  \  bacon.toml  biome.json  bun.lockb  deny.toml  devenv.nix  devenv.yaml  eslint.config.js  flake.nix  iron-indexer.toml  manifest.json  mprocs.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result  rustc-ice-2025-06-26T14_28_42-857890.txt  rustfmt.toml  tailwind.config.cjs  tauri.conf.json  tauri.test.conf.json  (+3 more)
crates/abis/: Cargo.toml
crates/abis/src/: commands.rs  lib.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: init.rs  lib.rs
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/broadcast/: Cargo.toml
crates/broadcast/src/: global.rs  lib.rs
crates/connections/: Cargo.toml
crates/connections/src/: actor.rs  commands.rs  ctx.rs  error.rs  init.rs  lib.rs  migrations.rs  permissions.rs  store.rs  utils.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: commands.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  error.rs  lib.rs  ws.rs
crates/core/src/alchemy/: commands.rs  error.rs  global.rs  mod.rs  utils.rs
crates/core/src/block_listener/: error.rs  expanders.rs  mod.rs
crates/core/src/db/: commands.rs  mod.rs  queries.rs
crates/core/src/dialogs/: commands.rs  error.rs  global.rs  handle.rs  mod.rs
crates/core/src/foundry/: mod.rs
crates/core/src/networks/: commands.rs  error.rs  global.rs  mod.rs  network.rs
crates/core/src/peers/: commands.rs  global.rs  mod.rs
crates/core/src/rpc/: mod.rs  send_transaction.rs
crates/core/src/settings/: commands.rs  mod.rs
crates/core/src/types/: checksummed_address.rs  tokens.rs
crates/core/src/wallets/: error.rs  mod.rs  (+4 more)
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: actor.rs  commands.rs  error.rs  init.rs  lib.rs  pagination.rs  queries.rs  sql_types.rs  utils.rs
crates/dialogs/: Cargo.toml
crates/dialogs/src/: commands.rs  error.rs  global.rs  handle.rs  lib.rs  presets.rs  utils.rs
crates/exchange-rates/: Cargo.toml
crates/exchange-rates/data/: chainlink.json
crates/exchange-rates/res/: feeds.json
crates/exchange-rates/src/: chainlink.rs  commands.rs  error.rs  feed.rs  feeds.rs  init.rs  lib.rs  types.rs  utils.rs
crates/forge/: Cargo.toml
crates/forge-traces/: Cargo.toml
crates/forge-traces/src/: lib.rs
crates/forge/src/: abi.rs  abi2.rs  actor.rs  commands.rs  error.rs  global.rs  init.rs  lib.rs  manager.rs  multi_path_watcher.rs  root_path_watcher.rs  root_paths_watcher.rs  test_runner.rs  utils.rs  watcher.rs  worker.rs
crates/globals/: Cargo.toml
crates/globals/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: error.rs  init.rs  lib.rs  utils.rs
crates/kv/: Cargo.toml
crates/kv/src/: error.rs  init.rs  lib.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/networks/: Cargo.toml
crates/networks/src/: actor.rs  commands.rs  error.rs  init.rs  lib.rs  migrations.rs  network.rs
crates/peers/: Cargo.toml
crates/peers/src/: global.rs  init.rs  lib.rs  peers.rs  server.rs
crates/prices/: Cargo.toml
crates/prices/res/: feeds.json
crates/prices/src/: chainlink.rs  error.rs  feed.rs  init.rs  lib.rs
crates/proxy-detect/: Cargo.toml
crates/proxy-detect/src/: comptroller.rs  eip1167.rs  eip1967.rs  eip897.rs  error.rs  lib.rs  openzeppelin.rs  safe.rs  utils.rs
crates/rpc/: Cargo.toml
crates/rpc/rpc-macros/: Cargo.toml
crates/rpc/src/: commands.rs  error.rs  init.rs  lib.rs  params.rs  rpc_request.rs  send_transaction.rs  send_transaction_2.rs  server.rs  sign_message.rs  simulate_transaction.rs  store.rs  utils.rs  v2.rs
crates/safe/: Cargo.toml
crates/safe/src/: commands.rs  error.rs  lib.rs  types.rs  utils.rs
crates/settings/: Cargo.toml
crates/settings/src/: actor.rs  autostart.rs  commands.rs  error.rs  global.rs  init.rs  lib.rs  migrations.rs  onboarding.rs  stacks.rs  utils.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: commands.rs  errors.rs  evm.rs  lib.rs  simulation.rs  types.rs
crates/simulator/tests/: detris.rs
crates/stacks/: Cargo.toml
crates/stacks/src/: actor.rs  commands.rs  docker.rs  docker_test.rs  error.rs  init.rs  lib.rs  utils.rs
crates/sync/: Cargo.toml
crates/sync/alchemy/: Cargo.toml
crates/sync/anvil/: Cargo.toml
crates/sync/dev-net/: Cargo.toml
crates/sync/devnet/: Cargo.toml
crates/sync/src/: commands.rs  error.rs  init.rs  lib.rs  utils.rs  worker.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: abis.rs  app.rs  commands.rs  context.rs  db.rs  dialogs.rs  error.rs  main.rs  rpc.rs  ws.rs
tauri/src/alchemy/: commands.rs  error.rs  global.rs  mod.rs  types.rs  utils.rs
tauri/src/block_listener/: error.rs  expanders.rs  mod.rs
tauri/src/context/: block_listener.rs  inner.rs  mod.rs  network.rs  peers.rs  wallet.rs
tauri/src/crypto/: mod.rs
tauri/src/db/: commands.rs  error.rs  mod.rs  queries.rs
tauri/src/dialogs/: commands.rs  handle.rs  mod.rs  presets.rs
tauri/src/foundry/: abi.rs  commands.rs  error.rs  mod.rs  settings.rs  watcher.rs
tauri/src/live_networks_listener/: error.rs  mod.rs
tauri/src/networks/: commands.rs  error.rs  global.rs  mod.rs  network.rs
tauri/src/peers/: commands.rs  global.rs  mod.rs
tauri/src/rpc/: error.rs  mod.rs  send_transaction.rs  sign_message.rs
tauri/src/settings/: commands.rs  error.rs  global.rs  mod.rs
tauri/src/simulator/: error.rs  evm.rs  mod.rs
tauri/src/store/: block_listeners.rs  events.rs  logs.rs  mod.rs  traces.rs  transactions.rs  types.rs
tauri/src/types/: alchemy_response.rs  checksummed_address.rs  events.rs  mod.rs
tauri/src/wallets/: commands.rs  error.rs  global.rs  hd_wallet.rs  json_keystore_wallet.rs  mod.rs  plaintext.rs  utils.rs  wallet.rs
(+1075 files in other folders)
