[workspace.package]
version = "1.14.3"
edition = "2021"
license-file = "./LICENSE"
homepage = "https://github.com/ethui"
repository = "https://github.com/ethui/ethui"
exclude = [".github/"]
authors = ["Miguel Palhas <mpalhas@gmail.com>"]

[workspace]
resolver = "2"
members = [
  "bin",
  "crates/forge",
  "crates/crypto",
  "crates/settings",
  "crates/networks",
  "crates/wallets",
  "crates/simulator",
  "crates/ws",
  "crates/rpc",
  "crates/connections",
  "crates/dialogs",
  "crates/types",
  "crates/abis",
  "crates/db",
  "crates/sync",
  "crates/broadcast",
  "crates/tracing",
  "crates/exchange-rates",
  "crates/args",
]
default-members = ["bin"]

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[workspace.dependencies]
ethui-forge = { path = "crates/forge" }
ethui-crypto = { path = "crates/crypto" }
ethui-settings = { path = "crates/settings" }
ethui-networks = { path = "crates/networks" }
ethui-wallets = { path = "crates/wallets" }
ethui-simulator = { path = "crates/simulator" }
ethui-ws = { path = "crates/ws" }
ethui-rpc = { path = "crates/rpc" }
ethui-connections = { path = "crates/connections" }
ethui-dialogs = { path = "crates/dialogs" }
ethui-types = { path = "crates/types" }
ethui-abis = { path = "crates/abis" }
ethui-db = { path = "crates/db" }
ethui-sync = { path = "crates/sync" }
ethui-sync-anvil = { path = "crates/sync/anvil" }
ethui-sync-alchemy = { path = "crates/sync/alchemy" }
ethui-broadcast = { path = "crates/broadcast" }
ethui-tracing = { path = "crates/tracing" }
ethui-args = { path = "crates/args" }
ethui-token-list = { path = "crates/token-list" }
ethui-proxy-detect = { git = "https://github.com/ethui/proxy-detect", rev = "f29bad1" }
tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }
thiserror = "2.0"
sqlx = { version = "0.8", default-features = false, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
  "json",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tauri = { version = "2.2", features = ["tray-icon"] }
once_cell = { version = "1.21", default-features = false }
secrets = { version = "1.2", features = ["use-libsodium-sys"] }
tracing = "0.1"
jsonrpc-core = { version = "18.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
alloy = { version = "0.12", default-features = false, features = [
  "sol-types",
  "contract",
  "signer-local",
  "signer-ledger",
  "signer-keystore",
  "signer-mnemonic",
  "eip712",
  "provider-http",
  "provider-ws",
  "provider-anvil-api",
  "provider-trace-api",
  "rpc",
  "json-rpc",
  "rpc-types",
  "reqwest-rustls-tls",
] }
alloy-chains = { version = "0.1", default-features = false, features = [
  "serde",
] }
url = { version = "2.5", features = ["serde"] }
futures = { version = "0.3", default-features = false }
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "env",
] }
rand = "0.9"
rstest = "0.23"
regex = "1.11"
anyhow = { version = "1.0", default-features = false }
tempfile = "3.19.1"
serde-constant = "0.1.0"
kameo = "0.14.0"

# Foundry - March 11th 2025
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "nightly-3c048be05726218c405d5d4deec4d3f1ab515f6f" }
foundry-block-explorers = "0.11"
