[workspace.package]
version = "1.26.4"
edition = "2024"
license = "MIT"
license-file = "./LICENSE"
homepage = "https://github.com/ethui"
repository = "https://github.com/ethui/ethui"
exclude = [".github/"]
authors = ["Miguel Palhas <mpalhas@gmail.com>"]

[workspace]
resolver = "2"
members = [
  "bin",
  "crates/analytics",
  "crates/forge",
  "crates/forge-traces",
  "crates/crypto",
  "crates/settings",
  "crates/networks",
  "crates/wallets",
  "crates/simulator",
  "crates/ws",
  "crates/rpc",
  "crates/connections",
  "crates/dialogs",
  "crates/types",
  "crates/abis",
  "crates/db",
  "crates/sync",
  "crates/broadcast",
  "crates/tracing",
  "crates/exchange-rates",
  "crates/args",
  "crates/stacks",
  "crates/proxy-detect",
]
default-members = ["bin"]

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[workspace.dependencies]
clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "env",
] }
analytics = { path = "crates/analytics" }
forge = { path = "crates/forge" }
forge-traces = { path = "crates/forge-traces" }
crypto = { path = "crates/crypto" }
settings = { path = "crates/settings" }
networks = { path = "crates/networks" }
wallets = { path = "crates/wallets" }
simulator = { path = "crates/simulator" }
ws = { path = "crates/ws" }
rpc = { path = "crates/rpc" }
connections = { path = "crates/connections" }
dialogs = { path = "crates/dialogs" }
common = { path = "crates/types" }
abis = { path = "crates/abis" }
db = { path = "crates/db" }
sync = { path = "crates/sync" }
sync-anvil = { path = "crates/sync/anvil" }
sync-alchemy = { path = "crates/sync/alchemy" }
broadcast = { path = "crates/broadcast" }
tracing-utils = { path = "crates/tracing" }
args = { path = "crates/args" }
token-list = { path = "crates/token-list" }
proxy-detect = { path = "crates/proxy-detect" }
stacks = { path = "crates/stacks" }
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "signal"] }
thiserror = "2.0"
sqlx = { version = "0.8", default-features = false, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
  "json",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tauri = { version = "2.9", features = ["tray-icon"] }
once_cell = { version = "1.21", default-features = false }
secrets = { version = "1.2", features = ["use-libsodium-sys"] }
tracing = "0.1"
jsonrpc-core = { version = "18.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
alloy = { version = "1.1", default-features = false, features = [
  "sol-types",
  "contract",
  "signer-local",
  "signer-ledger",
  "signer-keystore",
  "signer-mnemonic",
  "eip712",
  "provider-http",
  "provider-ws",
  "provider-anvil-api",
  "provider-trace-api",
  "rpc",
  "json-rpc",
  "rpc-types",
  "reqwest-rustls-tls",
] }
alloy-chains = { version = "0.2", default-features = false, features = [
  "serde",
] }
foundry-block-explorers = "0.22"
url = { version = "2.5", features = ["serde"] }
futures = { version = "0.3", default-features = false }
rand = "0.9"
rstest = "0.26"
regex = "1.12"
color-eyre = { version = "0.6" }
tempfile = "3.23.0"
serde-constant = "0.1.0"
kameo = "0.19.2"
tauri-plugin-aptabase = "1.0.0"
glob = "0.3.2"
walkdir = "2.4"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
tokio-tungstenite = "0.28"
