[package]
name = "iron"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
futures-util = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full", "sync"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
thiserror = "1.0.40"
ethers = "2.0.0"
ethers-core = "=2.0.0"
jsonrpc-core = "18.0.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
lazy_static = "1.4.0"
# r2d2_sqlite = "0.21.0"
# r2d2 = "0.8.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
