[package]
name = "iron"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
futures-util = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full", "sync"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
thiserror = "1.0.40"
ethers = { version = "2.0.0", features = ["ws"] }
ethers-core = { version = "2.0.0" }
jsonrpc-core = "18.0.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
lazy_static = "1.4.0"
once_cell = "1.17.1"
url = "2.3.1"
hex = "0.4.3"
async-trait = "0.1.68"

[features]
default = []
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
