[package]
name = "ethui-abis"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tauri = { workspace = true }

alloy-dyn-abi = { version = "0.6.4", features = ["eip712"] }
alloy-primitives.workspace = true
rstest = "0.18.2"

[dev-dependencies]
anyhow.workspace = true
