[package]
name = "ethui-abis"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

alloy-dyn-abi = { version = "0.8", features = ["eip712"] }
alloy.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest = "0.18.2"
