[package]
name = "ethui-abis"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

alloy-dyn-abi = { version = "0.8", features = ["eip712"] }

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
