[package]
name = "analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
mac_address = "1.1"
hostname = "0.4"
serde_json = "1.0"
tracing = "0.1"
tauri = { workspace = true }

# Optional Aptabase support
tauri-plugin-aptabase = { workspace = true, optional = true }

[features]
default = []
aptabase = ["dep:tauri-plugin-aptabase"]
