[package]
name = "analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
broadcast.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
uuid = { version = "1.18", features = ["v8", "serde"] }
mac_address = "1.1"
hostname = "0.4"
tracing.workspace = true

# Optional Aptabase support
tauri-plugin-aptabase = { workspace = true, optional = true }

[features]
default = []
aptabase = ["dep:tauri-plugin-aptabase"]
