[package]
name = "ethui-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true
