[package]
name = "broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
tokio.workspace = true
once_cell.workspace = true
serde_json.workspace = true
tracing.workspace = true
