[package]
name = "connections"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
networks.workspace = true
broadcast.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-constant.workspace = true
once_cell.workspace = true
jsonrpc-core.workspace = true
tauri.workspace = true
color-eyre.workspace = true
async-trait.workspace = true
chrono = "0.4.40"

[dev-dependencies]
tempfile.workspace = true
