[package]
name = "iron-context"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-db = { workspace = true }
iron-types = { workspace = true }
tokio = { workspace = true }
