[package]
name = "iron-contracts"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-db = { workspace = true }

ethers = { workspace = true }
tauri = { workspace = true }
sqlx = { workspace = true }
