[package]
name = "iron-core"
description = "Iron Wallet core lib"
authors.workspace = true
version = "0.4.1"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

eyre = "0.6.8"
futures-util = "0.3.27"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full", "sync"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
thiserror = "1.0.40"
ethers = { version = "2.0.0", features = ["ws"] }
jsonrpc-core = "18.0.0"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
] }
once_cell = "1.17.1"
url = "2.3.1"
hex = "0.4.3"
async-trait = "0.1.68"
urlencoding = "2.1.2"
enum_dispatch = "0.3.11"
coins-bip32 = "0.8.3"
glob = "0.3.1"
notify = "6.0.0"
futures = "0.3.28"
regex = "1.8.1"
anyhow = "1.0.71"
secrets = { version = "1.2.0", features = ["use-libsodium-sys"] }
chacha20poly1305 = "0.10.1"
rust-argon2 = "1.0.0"
aead = { version = "0.5.2", features = ["stream"] }
zeroize = "1.6.0"
