[package]
name = "ethui-crypto"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true


[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
chacha20poly1305 = "0.10.1"
rust-argon2 = "2.0.0"
aead = { version = "0.5.2", features = ["stream"] }
zeroize = "1.6.0"

[package.metadata.cargo-machete]
ignored = ["rust-argon2"]
