[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true


[dependencies]
serde.workspace = true
serde_json.workspace = true
color-eyre.workspace = true
chacha20poly1305 = "0.10.1"
rust-argon2 = "3.0"
aead = { version = "0.5.2", features = ["stream"], default-features = false }
zeroize = "1.8"

[package.metadata.cargo-machete]
ignored = ["rust-argon2"]
