[package]
name = "ethui-db"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-settings.workspace = true
ethui-broadcast.workspace = true

alloy.workspace = true
alloy-chains.workspace = true
foundry-block-explorers.workspace = true
sqlx = { workspace = true, features = ["json"] }
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
