[package]
name = "ethui-dialogs"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types = { workspace = true }
ethui-broadcast = { workspace = true }

tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

rand = "0.8.5"
