[package]
name = "dialogs"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
broadcast.workspace = true

tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
color-eyre.workspace = true
once_cell.workspace = true
tracing.workspace = true

rand = "0.9.0"
