[package]
name = "iron-exchange-rates"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-types = { workspace = true }
iron-abis = { workspace = true }

tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
