[package]
name = "ethui-exchange-rates"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-trait.workspace = true
