[package]
name = "ethui-forge-traces"
description = "ethui forge test traces integration"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
color-eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[features]
default = []
forge-traces = []
