[package]
name = "ethui-forge"
description = "ethui forge integration"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-settings.workspace = true
ethui-networks.workspace = true
ethui-broadcast.workspace = true
ethui-db.workspace = true

alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
kameo.workspace = true

glob = "0.3.2"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
