[package]
name = "iron-http"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-connections = { workspace = true }
iron-forge = { workspace = true }
iron-rpc = { workspace = true }
iron-types = { workspace = true }
iron-ws = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

axum = "0.6"
