[package]
name = "iron-http"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-broadcast = { workspace = true }
iron-connections = { workspace = true }
iron-db = { workspace = true }
iron-forge = { workspace = true }
iron-networks = { workspace = true }
iron-rpc = { workspace = true }
iron-settings = { workspace = true }
iron-simulator = { workspace = true }
iron-sync-alchemy = { workspace = true }
iron-types = { workspace = true }
iron-wallets = { workspace = true }
iron-ws = { workspace = true }
iron-args = { workspace = true }

ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

axum = "0.6"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }

[features]
default = []
http-insecure-endpoints = []
