[package]
name = "iron-networks"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-types = { workspace = true }
iron-broadcast = { workspace = true }

ethers = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

log = "0.4.17"
url = "2.3.1"
async-trait = "0.1.68"
