[package]
name = "ethui-networks"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-broadcast.workspace = true

alloy.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-constant.workspace = true
tokio.workspace = true
once_cell.workspace = true
color-eyre.workspace = true
url.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
