[package]
name = "iron-peers"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-types = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures-util = "0.3.27"
log = "0.4.17"
tokio = { workspace = true }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
thiserror = "1.0.40"
jsonrpc-core = "18.0.0"
sqlx = { workspace = true }
once_cell = "1.17.1"
url = "2.3.1"
hex = "0.4.3"
async-trait = "0.1.68"
urlencoding = "2.1.2"
enum_dispatch = "0.3.11"
notify = "6.0.0"
futures = "0.3.28"
regex = "1.8.1"
anyhow = "1.0.71"
