[package]
name = "iron-peers"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-types = { workspace = true }

tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }

log = "0.4.17"
thiserror = "1.0.40"
url = "2.3.1"
notify = "6.0.0"
async-trait = "0.1.68"
