[package]
name = "rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
settings.workspace = true
db.workspace = true
dialogs.workspace = true
networks.workspace = true
wallets.workspace = true
connections.workspace = true
simulator.workspace = true
sync.workspace = true
forge.workspace = true
broadcast.workspace = true

alloy.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonrpc-core.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
url.workspace = true

[features]
default = []
forge-traces = []
